// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`position renders 0 1`] = `
Array [
  .c0 {
  position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  position: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`position renders function 1`] = `
Array [
  .c0 {
  position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  position: has;
}

<div
    className="c0"
  />,
  .c0 {
  position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  position: has;
}

<div
    className="c0"
  />,
]
`;

exports[`position renders invalid theme path 1`] = `
Array [
  .c0 {
  position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  position: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`position renders negative number 1`] = `
Array [
  .c0 {
  position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  position: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  position: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`position renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    position: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    position: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`position renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    position: July;
  }
}

@media April {
  .c0 {
    position: August;
  }
}

@media January {
  .c0 {
    position: September;
  }
}

@media April {
  .c0 {
    position: November;
  }
}

@media June {
  .c0 {
    position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    position: July;
  }
}

@media April {
  .c0 {
    position: August;
  }
}

@media January {
  .c0 {
    position: September;
  }
}

@media April {
  .c0 {
    position: November;
  }
}

@media June {
  .c0 {
    position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    position: January;
  }
}

@media April {
  .c0 {
    position: December;
  }
}

@media January {
  .c0 {
    position: April;
  }
}

@media April {
  .c0 {
    position: May;
  }
}

@media June {
  .c0 {
    position: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    position: January;
  }
}

@media April {
  .c0 {
    position: December;
  }
}

@media January {
  .c0 {
    position: April;
  }
}

@media April {
  .c0 {
    position: May;
  }
}

@media June {
  .c0 {
    position: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`position renders postitive number 1`] = `
Array [
  .c0 {
  position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  position: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  position: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`position renders string 1`] = `
Array [
  .c0 {
  position: July;
}

<div
    className="c0"
  />,
  .c0 {
  position: July;
}

<div
    className="c0"
  />,
  .c0 {
  position: June;
}

<div
    className="c0"
  />,
  .c0 {
  position: June;
}

<div
    className="c0"
  />,
]
`;

exports[`position renders valid theme path 1`] = `
Array [
  .c0 {
  position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  position: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
